<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">InventoryApp</string>

    <!-- Label for the emptyImageView [CHAR LIMIT=12] -->
    <string name="content_description">Image missing</string>

    <!-- Label for overflow menu option that deletes all store data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Add a product</string>

    <!-- Label for editor menu option to save store and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current store [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for the editor in a edit mode or insert mode [CHAR LIMIT=20] -->
    <string name="editor_edit_mode">Edit a product</string>
    <string name="editor_insert_mode">Add a product</string>

    <!-- Label for the empty view when no data are available [CHAR LIMIT=50] -->
    <string name="empty_inventory">Inventory is empty!</string>
    <string name="empty_view_info">Get started by adding a product</string>
    <string name="empty_view_action">Add an item, click on the add \n floating button below. \n Or click on the menu and \n select add product</string>

    <!-- Label for textView editor activity's item [CHAR LIMIT=20] -->
    <string name="product_overview">Product overview</string>
    <string name="supplier_overview">Supplier overview</string>
    <string name="product_title">description:</string>
    <string name="product_name">Product:</string>
    <string name="product_price">Price:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="supplier_name">Supplier:</string>
    <string name="supplier_phone">Phone:</string>
    <string name="supplier_email">Email:</string>

    <!-- Label for hint editText editor activity's item [CHAR LIMIT=20] -->
    <string name="hint_name">name required</string>
    <string name="hint_price">required</string>
    <string name="hint_quantity">required</string>
    <string name="hint_phone">phone required</string>
    <string name="hint_email">mail required</string>

    <!-- Label for editor activity's item [CHAR LIMIT=20] -->
    <string name="product_title_0">Informatics</string>
    <string name="product_title_1">Computer</string>
    <string name="product_title_2">Desktop</string>
    <string name="product_title_3">Laptop</string>
    <string name="product_title_4">Hardware</string>
    <string name="product_title_5">Software</string>
    <string name="product_title_6">Cell Phone</string>
    <string name="product_title_7">SmartPhone</string>

    <!-- Label for the overflow menu add product (product name) -->
    <string name="product_name_0">HDD wd256GB</string>
    <string name="product_name_1">NVidia</string>
    <string name="product_name_2">DELL 16X</string>
    <string name="product_name_3">Lenovo T420</string>
    <string name="product_name_4">memory 8GB</string>
    <string name="product_name_5">Win10</string>
    <string name="product_name_6">Nokia</string>
    <string name="product_name_7">OnePlus6</string>

    <!-- Label for the overflow menu add product (supplier name) -->
    <string name="supplier_name_0">support@</string>
    <string name="supplier_name_1">MediaMarkt</string>
    <string name="supplier_name_2">FNAC</string>
    <string name="supplier_name_3">Amazon</string>
    <string name="supplier_name_4">LDLC</string>
    <string name="supplier_name_5">Microsoft</string>
    <string name="supplier_name_6">BestBuy</string>
    <string name="supplier_name_7">OnePlus</string>

    <!-- Label for the overflow menu add product (supplier email) -->
    <string name="supplier_email_0">support@support@.be</string>
    <string name="supplier_email_1">support@MediaMarkt.com</string>
    <string name="supplier_email_2">support@FNAC.fr</string>
    <string name="supplier_email_3">support@Amazon.com</string>
    <string name="supplier_email_4">support@LDLC.be</string>
    <string name="supplier_email_5">support@Microsoft.com</string>
    <string name="supplier_email_6">support@BestBuy.us</string>
    <string name="supplier_email_7">support@OnePlus.net</string>

    <!-- Label for the overflow menu add product (supplier phone) -->
    <string name="supplier_phone_0">55589745</string>
    <string name="supplier_phone_1">55589746</string>
    <string name="supplier_phone_2">45622556</string>
    <string name="supplier_phone_3">54566546</string>
    <string name="supplier_phone_4">65465465</string>
    <string name="supplier_phone_5">65456545</string>
    <string name="supplier_phone_6">65414846</string>
    <string name="supplier_phone_7">56565464</string>

    <!-- Label for the ProviderContent's messages IllegalArgumentException [CHAR LIMIT=50] -->
    <string name="unknown_content_query">Cannot query unknown URI: %1$s</string>
    <string name="unknown_content_getType">Unknown Uri: %1$s with match: %2$d</string>
    <string name="unknown_content_insert">Insertion is not supported for: %1$s</string>
    <string name="unknown_content_insertion">Failed to insert row for: %1$s</string>
    <string name="unknown_content_update">Update is not supported for: %1$s</string>
    <string name="unknown_content_deletion">deletion is not supported for: %1$s</string>

    <!-- Label for the LOG TAG messages in the activity -->
    <string name="log_message_all_delete"> rows (all) deleted from pet database</string>
    <string name="log_message_row_delete"> row delete from the database</string>

    <!-- Label for dialog messages [CHAR LIMIT=50] -->
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="alert_dialog_confirm_delete_all">Delete all the products?</string>
    <string name="alert_dialog_confirm_delete_product">Delete the product?</string>
    <string name="alert_dialog_unsaved_message">Discard the changes and quit editing.</string>
    <string name="alert_dialog_keep_editing">Keep On</string>
    <string name="alert_dialog_discard">Discard</string>

    <!-- Label for action on the editorActivity if insertion/update/delete in database
    is successful or not [CHAR LIMIT=50] -->
    <string name="insertion_successful">Product saved</string>
    <string name="insertion_failed">Error saving product</string>
    <string name="update_successful">Product updated</string>
    <string name="update_failed">Error updating product</string>
    <string name="delete_successful">Product deleted</string>
    <string name="delete_error">Error deleting product</string>

    <!-- Label for the sold button in the listView [CHAR LIMIT=20] -->
    <string name="product_sold">Product sold</string>
    <string name="product_sold_error">Error while proceeding</string>
    <string name="product_sold_stock_zero">Not enough product in stock</string>

    <!-- Label to handle error check input edit text [CHAR LIMIT=20] -->
    <string name="error_empty_product_name">Product Name is required</string>
    <string name="error_empty_product_price">Product Price is required</string>
    <string name="error_empty_product_quantity">Product Quantity is required</string>
    <string name="error_empty_product_quantity_zero">Product Quantity can\'t be less than 0</string>
    <string name="error_empty_supplier_name">Supplier Name is required</string>
    <string name="error_empty_supplier_email">Supplier Email is required</string>
    <string name="error_empty_supplier_phone">Supplier Phone is required</string>

    <!-- Label to handle the email messages [CHAR LIMIT=50] -->
    <string name="header_message">Dear Sr %1$s</string>

    <!-- Label to handle message if no cell networks available -->
    <string name="no_cell_network">No network id, can\'t make calls</string>

</resources>
