<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- CardView product description -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_8"
        app:contentPadding="@dimen/value_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editor_overview"
                style="@style/main_text_view"
                android:layout_marginBottom="@dimen/value_16"
                android:layout_centerHorizontal="true"
                android:text="@string/product_overview"/>

            <LinearLayout
                android:id="@+id/container_description"
                style="@style/edit_linear_layout"
                android:layout_below="@id/editor_overview">

                <TextView
                    style="@style/editor_text_view"
                    android:layout_gravity="center_vertical"
                    android:text="@string/product_title"/>

                <Spinner
                    android:id="@+id/product_spinner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/value_48"
                    android:layout_weight="3"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_product"
                style="@style/edit_linear_layout"
                android:layout_below="@id/container_description">

                <TextView
                    style="@style/editor_text_view"
                    android:text="@string/product_name"/>

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/edit_text"
                    android:hint="@string/hint_name"
                    android:inputType="textAutoComplete"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_price"
                style="@style/edit_linear_layout"
                android:layout_below="@id/container_product">

                <TextView
                    style="@style/editor_text_view"
                    android:text="@string/product_price"/>

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/edit_text"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_quantity"
                style="@style/edit_linear_layout"
                android:layout_below="@id/container_price">

                <TextView
                    style="@style/editor_text_view"
                    android:text="@string/product_quantity"/>

                <ImageButton
                    android:id="@+id/edit_btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:src="@drawable/ic_exposure_plus_1"/>

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/edit_text"
                    android:layout_weight="1"
                    android:hint="@string/hint_price"
                    android:inputType="number"/>

                <ImageButton
                    android:id="@+id/edit_btn_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_exposure_neg_1"/>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- CardView product description -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_8"
        app:contentPadding="@dimen/value_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/supplier_overview"
                style="@style/main_text_view"
                android:layout_marginBottom="@dimen/value_16"
                android:layout_centerHorizontal="true"
                android:text="@string/supplier_overview"/>

            <LinearLayout
                android:id="@+id/container_supplier_name"
                style="@style/edit_linear_layout"
                android:layout_below="@id/supplier_overview">

                <TextView
                    style="@style/editor_text_view"
                    android:text="@string/supplier_name"/>

                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/edit_text"
                    android:hint="@string/hint_name"
                    android:inputType="textCapSentences"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_supplier_email"
                style="@style/edit_linear_layout"
                android:layout_below="@id/container_supplier_name">

                <TextView
                    style="@style/editor_text_view"
                    android:text="@string/supplier_email"/>

                <EditText
                    android:id="@+id/edit_supplier_mail"
                    style="@style/edit_text"
                    android:hint="@string/hint_email"
                    android:inputType="textCapSentences"/>

                <ImageButton
                    android:id="@+id/edit_btn_send_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_supplier_phone"
                style="@style/edit_linear_layout"
                android:layout_below="@id/container_supplier_email">

                <TextView
                    style="@style/editor_text_view"
                    android:text="@string/supplier_phone"/>

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/edit_text"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"/>

                <ImageButton
                    android:id="@+id/edit_btn_call_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"/>

            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>